set up server side API Calls to Giphy API

--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,8 +1,9 @@
-<ul>
-        <li>
-            <a href="#!/search">Search for a Gif</a>
-        </li>
-        <li>
-            <a href="#!/random">Random Gif Generator</a>
-        </li>
-    </ul>
+<ul mat-menu>
+    <li mat-menu-item>
+        <a href="#!/search">Search for a Gif</a>
+        
+    </li>
+    <li mat-menu item>
+        <a href="#!/random">Random Gif Generator</a>
+    </li>
+</ul>
