--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,9 +1,16 @@
-<ul mat-menu>
-    <li mat-menu-item>
-        <a href="#!/search">Search for a Gif</a>
-        
-    </li>
-    <li mat-menu item>
-        <a href="#!/random">Random Gif Generator</a>
-    </li>
-</ul>
+<div>
+    <md-content class="md-padding">
+        <md-nav-bar
+            md-no-ink-bar="disableInkBar"
+            md-selected-nav-item="currentNavItem"
+            nav-bar-aria-label="navigation links">
+                <md-nav-item md-nav-click="vm.goto('/search')" name="Search">
+                <a href="#!/search">Search</a> 
+                </md-nav-item>
+                <md-nav-item md-nav-click="vm.goto('#!/random')" name="Random">
+                <a href="#!/random">Random</a>
+                </md-nav-item>
+               
+        </md-nav-bar>
+    </md-content>
+</div>
